fix(dmn-table): make annotation heading visible
Related to CAM-4727

--- a/webapps/client/styles/directives/dmn-table.less
+++ b/webapps/client/styles/directives/dmn-table.less
@@ -1,4 +1,4 @@
-[data-element-id="cell_annotations_ioLabel"] span {
+.dmn-table thead th[data-element-id="cell_annotations_ioLabel"] .dmn-js-logo {
   display: none;
 }
 .ctn-tabbed-content [cam-widget-variable][display] {
